# plentysound

./: Cargo.toml  README.md  build-arch-repo.sh  flake.nix  result  vm.sh
.github/workflows/: nix-build.yml  nix-checks.yml  release.yml
nix/: crane-overlay.nix  filter-vendor.nix  libvosk.nix  package.nix
nix/bundlers/: aur.nix  deb.nix  rpm.nix
plentysound/: Cargo.toml
plentysound-transcriber/: Cargo.toml
plentysound-transcriber/src/: audio.rs  detector.rs  lib.rs
plentysound-transcriber/tests/: accuracy.rs
plentysound/src/: app.rs  audio.rs  client.rs  daemon.rs  event.rs  filebrowser.rs  log.rs  main.rs  pipewire.rs  protocol.rs  textinput.rs  tray.rs  ui.rs
src/: main.rs
tests/: accuracy.rs
tests/samples/: manifest.toml
