[package]
name = "plentysound"
version = "0.1.0"
edition = "2021"

[dependencies]
# PipeWire Rust bindings
pipewire = "0.8"

# Vosk speech recognition
vosk = "0.2"

# Async runtime
tokio = { version = "1", features = ["rt", "macros", "sync", "signal"] }

# Error handling
anyhow = "1"
biquad = "0.5.0"
strsim = "0.11.1"

[dev-dependencies]
hound = "3"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
