[package]
name = "plentysound-transcriber"
version = "0.1.0"
edition = "2021"

[dependencies]
pipewire = "0.8"
vosk = "0.2"
tokio = { version = "1", features = ["rt", "macros", "sync", "signal"] }
anyhow = "1"
biquad = "0.5.0"
strsim = "0.11.1"

[dev-dependencies]
hound = "3"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
