[package]
name = "plentysound"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
symphonia = { version = "0.5", features = ["all-codecs", "all-formats"] }
pipewire = "0.8"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
ksni = "0.2"
libc = "0.2"
