[package]
name = "plentysound"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
symphonia = { version = "0.5", features = ["all-codecs", "all-formats"] }
pipewire = "0.8"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
ksni = "0.2"
libc = "0.2"
plentysound-transcriber = { path = "../plentysound-transcriber", optional = true }

# Platform-specific dependencies to avoid Windows deps on Linux
[target.'cfg(not(windows))'.dependencies]
crossterm = { version = "0.28", default-features = false, features = ["bracketed-paste", "events"] }
ureq = { version = "3", optional = true }

[target.'cfg(windows)'.dependencies]
crossterm = "0.28"
ureq = { version = "3", optional = true }

[features]
transcriber = ["dep:plentysound-transcriber", "dep:ureq"]
